--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<title>woikke</title>
 	<link rel="stylesheet" type="text/css" href="css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
+	
 </head>
 <body>
-	<section class="top header">
+	<section class="top-header">
 		<h5>Spend $150 save $30 on all our flowers</h5>
 	</section>
 	<header>
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 		</section>
-		<!-------------------flowwr gifts section-->
+<!-------------------flowwr gifts section-->
 		<section class="free-nextday">
 			<h2>Free next-day US delivery</h2>
 			<h3>Order by 7pm Monday-Frida y or by midday at weekends</h3>
@@ -75,19 +75,130 @@
 				<div class="row">
 					<div class="col">
 						<div class="shop">
-							<img src="images/daisies-276112_1920.jpg" alt="daisies-276112_1920">
+							<img src="images/flowers-yellow-spring-tulip-53529.jpg" alt="flowers-yellow-spring-tulip-53529">
 							<a href="#">Birthday</a>
 						</div>	
 					</div>
 						<div class="col">
 							<div class="row">
-								<div class="col"></div>
-								<div class="col"></div>
-								<div class="-100"></div>
+								<div class="col">
+									<div class="shop">
+							<img src="images/close-up-photography-flowers-in-a-vase-757889.jpg" alt="close-up-photography-flowers-in-a-vase-757889">
+							<a href="#">congrates</a>
+						</div>
+								</div>
+								<div class="col">
+									<div class="shop">
+							        <img src="images/close-up-photography-flowers-in-a-vase-757889.jpg" alt="close-up-photography-flowers-in-a-vase-757889">
+							        <a href="#">with love</a>
+						            </div>
+								</div>
+								<div class="col-100">
+									<div class="shop">
+									<img src="images/arrangement-bloom-blooming-blossom-350349.jpg" alt="arrangement-bloom-blooming-blossom-350349">
+									<a href="#">thank you</a>
+						            </div>
+								</div>
 							</div>
 						</div>
 				</div>
 			</div>
 		</section>
+		<section class="treat-special-section">
+			<div class="treat-heading">
+				<h1>Treat someone special</h1>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-50">
+						<div class="treat">
+						<img src="images/daisies-276112_1920.jpg" alt="daisies-276112_1920" title="daisies">
+						<div class="treat-content">
+
+						<h2>Beautiful Flowers</h2>
+						<p>Beautiful, fresh flowers chosen and hand tied by our talented florists for any occasion.</p>
+						<a class="bouquet-btn" href="#">shop the bouquets</a>
+						</div>
+						</div>
+					</div>
+					<div class="col-50">
+						<div class="treat">
+						<img src="images/daisies-276112_1920.jpg" alt="daisies-276112_1920" title="daisies">
+						<div class="treat-content">
+						<h2>Beautiful Flowers</h2>
+						<p>Beautiful, fresh flowers chosen and hand tied by our talented florists for any occasion.</p>
+						<a class="bouquet-btn" href="#">shop the bouquets</a>
+						</div>
+					</div>
+				</div>
+				</div>
+			</div>
+		</section>
+<!-------------------about us  section------------->
+		<section class="about-section">
+			<div class="container">
+				<div class="row align-center">
+					<div class="col">
+						<h1>About us</h1>
+						<h4>	A great about us block helps builds trust between you and your customers. The more content you provide about you and your business, the more confident people will be when purchasing from your store.</h4>
+					</div>
+					<div class="col">
+						<img src="images/beautiful-flowers-bouquet-color-424670.jpg" alt="beautiful-flowers-bouquet" title="beautiful-flowers-bouquet">
+					</div>	
+				</div>
+			</div>
+		</section>
+<!-------------------about us section------------->
+	<!-- footer section start--->						
+			<footer>
+				<div class="container">
+					<div class="row">
+						<div class="col-1-4">
+						<h2>+566 4774 9930</h2>
+						<p>All week from 9 am to 9 pm </p>
+						<h3>Address: 7895 Piermont Dr NE Albuquerque,NM 198866, United States of America</h3>
+						<a href="#">info@mydomain.com</a>
+
+						<div class="social-icon">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
+							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+							<li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+						</ul>
+						<h6>© Wokiee 2019. All Rights Reserved </h6>
+						</div>
+						</div>
+					
+								<div class="col-1-4">
+									<div class="row">
+										<div class="col-1-4">
+									<ul>
+										<li><a href="#">flowers</a></li>
+										<li><a href="#">cupcakes and cake</a></li>
+										<li><a href="#">designers gift</a></li>
+										<li><a href="#">most popular</a></li>
+									</ul>
+								</div>
+
+								<div class="col-1-4">
+									<ul>
+										<li><a href="#">about us</a></li>
+										<li><a href="#">services</a></li>
+										<li><a href="#">contacts</a></li>
+										<li><a href="#">copyright</a></li>
+										<li><a href="#">FAQs</a></li>
+										<li><a href="#">privacy policy </a></li>
+										<li><a href="#">cookie policy</a></li>
+										<li><a href="#">terms and conditions</a></li>
+									</ul>
+									</div>
+							</div>
+						</div>
+					</div>								
+				</div>
+			</footer>
+			<!-- footer section end--->
 </body>
 </html>
